--- a/docs/part1/mechanical_concepts.ipynb
+++ b/docs/part1/mechanical_concepts.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "<center>\n",
     "<div>\n",
-    "<img src=\"cardiac_anisotropy.png\" width=\"500\"/>\n",
+    "<img src=\"..cardiac_anisotropy.png\" width=\"500\"/>\n",
     "</div>\n",
     "</center>\n",
     "\n",
