--- a/docs/part2/active_contraction.ipynb
+++ b/docs/part2/active_contraction.ipynb
@@ -34,10 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "4bfd7d85-c32d-479b-90f8-4e91b93101f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -90,84 +98,6 @@
    "source": [
     "mesh_file = \"meshes/tile_connected_10p0.h5\"\n",
     "mesh, volumes = emi_m.load_mesh(mesh_file)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a82118eb-656d-4cc8-86a8-b99da9bf401a",
-   "metadata": {},
-   "source": [
-    "Here, the mesh object gives us a tetrahedral representation of our geometry (all nodes and edges) and volumes is a so-called MeshFunction which tells us which elements (tetrahedra) belongs to the intracellular space, and which elements belongs to the extracellular space. We can actually print the meshfunction's \"array\" representation to see the data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "ec7f05a1-a343-4d81-b400-38af327b3cbe",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Subdomain data length:  1364\n",
-      "Subdomain data:  [1 1 1 ... 0 0 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Subdomain data length: \", len(volumes.array()[:]))\n",
-    "print(\"Subdomain data: \", volumes.array()[:])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8ae061cb-b4ce-4a26-9e91-50e35c8bf30a",
-   "metadata": {},
-   "source": [
-    "Here, all the ones represent the cell (the intracellular subdomain) and all the zeros the matrix (the extracellular subdomain)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "51dc81a5-9fcc-4e49-bc69-4f95a6751df1",
-   "metadata": {},
-   "source": [
-    "We can save the volumes object to a pvd file:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "504de19b-38ef-4dbd-9ace-0c6044ba3477",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f.File(\"subdomains.pvd\") << volumes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5b79dba1-e5a7-4ea2-9f09-45f1bbda29c3",
-   "metadata": {},
-   "source": [
-    "In the code you are running the notebook from, you should now have a file called \"subdomains.pvd\", as well as a file called \"subdomains000000.vtu\", which belong together. You can open either of these in Paraview, and inspect the output. Through Paraview we can visualize the subdomains and the mesh representation, which for our sample mesh can look like this:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f972f444-0d74-4248-bd77-b160ea3fb6cf",
-   "metadata": {},
-   "source": [
-    "![title](figures/subdomains_meshes_tile_connected_10p0.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6f681cf9-4180-450d-bf08-7c030f39a333",
-   "metadata": {},
-   "source": [
-    "We will denote the intracellular subdomain, i.e., the cell, by $\\Omega_i$, and the extracellular subdomain, i.e., the matrix, by $\\Omega_e$."
    ]
   },
   {
@@ -618,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
