--- a/docs/part2/meshes_geometries.ipynb
+++ b/docs/part2/meshes_geometries.ipynb
@@ -37,7 +37,15 @@
    "execution_count": 2,
    "id": "4bfd7d85-c32d-479b-90f8-4e91b93101f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+     ]
+    }
+   ],
    "source": [
     "import fenics as f\n",
     "import emimechanicalmodel as emi_m"
@@ -69,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "794490b7-c30c-4d3f-b6c9-0f7bd5b5cfc4",
    "metadata": {},
    "outputs": [
@@ -83,7 +91,7 @@
     }
    ],
    "source": [
-    "mesh_file = \"meshes/tile_connected_10p0.h5\"\n",
+    "mesh_file = \"tile_connected_10p0.h5\"\n",
     "mesh, volumes = emi_m.load_mesh(mesh_file)"
    ]
   },
@@ -97,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "ec7f05a1-a343-4d81-b400-38af327b3cbe",
    "metadata": {},
    "outputs": [
@@ -133,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "504de19b-38ef-4dbd-9ace-0c6044ba3477",
    "metadata": {},
    "outputs": [],
@@ -154,7 +162,11 @@
    "id": "f972f444-0d74-4248-bd77-b160ea3fb6cf",
    "metadata": {},
    "source": [
-    "![Subdomains and meshes](figures/subdomains_meshes_tile_connected_10p0.png)"
+    "<center>\n",
+    "<div>\n",
+    "<img src=\"../subdomains_meshes_tile_connected_10p0.png\" width=\"800\"/>\n",
+    "</div>\n",
+    "</center>"
    ]
   },
   {
