model options updates; stress and strain comparisons

--- a/docs/running_the_model/active_contraction.ipynb
+++ b/docs/running_the_model/active_contraction.ipynb
@@ -166,7 +166,7 @@
    "source": [
     "time = np.linspace(0, 500, 125)       # 500 ms with 125 steps\n",
     "\n",
-    "active_precomputed, _ = emi_m.compute_active_component(time)\n",
+    "active_precomputed = emi_m.compute_active_component(time)\n",
     "\n",
     "plt.plot(time, active_precomputed)\n",
     "plt.xlabel(\"Time (ms)\")\n",
@@ -359,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
