--- a/docs/preliminaries/cardiac_structure.ipynb
+++ b/docs/preliminaries/cardiac_structure.ipynb
@@ -5,7 +5,7 @@
    "id": "a4bb74c9-ad06-467f-ab0f-a694eadab612",
    "metadata": {},
    "source": [
-    "# Cardiac structures"
+    "# Cardiac structure"
    ]
   },
   {
@@ -56,7 +56,7 @@
     "\n",
     "<center>\n",
     "<div>\n",
-    "<img src=\"../geometries_meshes.png\" width=\"300\" height=600/>\n",
+    "<img src=\"../geometries_meshes.png\" width=\"300\"/>\n",
     "</div>\n",
     "</center>\n",
     "\n",
@@ -96,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
